k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amanpatel-portfolio-service
  labels:
    app: portfolio
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: portfolio
    tier: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
